package names refactored in layout files

--- a/app/src/main/res/layout/bottom_sheet_picker_bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet_picker_bottom_sheet.xml
@@ -51,7 +51,7 @@
 
         </FrameLayout>
 
-        <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
+        <lk.chathurabuddi.datetimepicker.wheel.SingleDateAndTimePicker
             android:id="@+id/picker"
             android:layout_width="match_parent"
             android:layout_height="230dp"
