--- a/app/src/main/res/layout-v21/bottom_sheet_picker_bottom_sheet.xml
+++ b/app/src/main/res/layout-v21/bottom_sheet_picker_bottom_sheet.xml
@@ -52,7 +52,7 @@
 
         </FrameLayout>
 
-        <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
+        <lk.chathurabuddi.datetimepicker.wheel.SingleDateAndTimePicker
             android:id="@+id/picker"
             android:layout_width="match_parent"
             android:layout_height="230dp"
