--- a/app/src/main/res/layout/bottom_sheet_double_picker.xml
+++ b/app/src/main/res/layout/bottom_sheet_double_picker.xml
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 >
 
-                <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
+                <lk.chathurabuddi.datetimepicker.wheel.SingleDateAndTimePicker
                     android:id="@+id/picker_tab_0"
                     android:layout_width="match_parent"
                     android:layout_height="230dp"
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 >
 
-                <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
+                <lk.chathurabuddi.datetimepicker.wheel.SingleDateAndTimePicker
                     android:id="@+id/picker_tab_1"
                     android:layout_width="match_parent"
                     android:layout_height="230dp"
