--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -35,6 +35,7 @@
         <attr name="picker_cyclic" format="boolean"/>
         <attr name="picker_mustBeOnFuture" format="boolean"/>
         <attr name="picker_visibleItemCount" format="integer"/>
+        <attr name="picker_isAmPm" format="boolean"/>
         <!-- A drawable to use as the selector background.  This can be either a reference
              to a full drawable resource (such as a PNG image, 9-patch,
              XML state list description, etc), or a solid color such as "#ff000000"
