--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -41,6 +41,9 @@
              XML state list description, etc), or a solid color such as "#ff000000"
             (black). -->
         <attr name="picker_selectorBackground" format="reference|color"/>
+        <!-- A value from 0 to 1, where 0 means the view is completely transparent
+             and 1 means the view is completely opaque. -->
+        <attr name="picker_selectorAlpha" format="float"/>
         <attr name="picker_selectorHeight" format="dimension"/>
         <attr name="picker_displayMonth" format="boolean"/>
         <attr name="picker_displayYears" format="boolean"/>
